added some JS to project

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <title>Your Business</title>
     <link rel="stylesheet" href="styles/main.css" type="text/css">
 </head>
     <body>
@@ -165,9 +165,9 @@
                             <span class="small-text">Enter your details below</span>
                         </h3>
                         <div class="form-holder facebook-analysis__form-holder">
-                            <div class="form-holder__round-check"></div>
-                            <form action="#" class="user-data facebook-analysis__user-data">
-                                <div class="user-data__close-form"></div>
+                            <div id="close-form1" class="form-holder__round-check"></div>
+                            <form action="#" id="user-data" class="user-data facebook-analysis__user-data _form-opened">
+                                <div id="close-form2" class="user-data__close-form"></div>
                                 <p class="user-data__title">
                                     Sit down with our experts to receive a free customized marketing plan for your business + Learn How To Use Google and Facebook to get 5000% ROI or more
                                 </p>
@@ -218,4 +218,5 @@
             </footer>
         </div>  
     </body>
+    <script src="script/script.js"></script>
 </html>
