Fixed some bugs with display on smartphones and added on-close animation in user-form

--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
                         </h3>
                         <div class="form-holder facebook-analysis__form-holder">
                             <div id="close-form1" class="form-holder__round-check"></div>
-                            <form action="#" id="user-data" class="user-data facebook-analysis__user-data _form-opened">
-                                <div id="close-form2" class="user-data__close-form"></div>
+                            <form action="#" id="user-data" class="user-data facebook-analysis__user-data">
                                 <p class="user-data__title">
                                     Sit down with our experts to receive a free customized marketing plan for your business + Learn How To Use Google and Facebook to get 5000% ROI or more
                                 </p>
